syntax = "proto3";

option csharp_namespace = "LPS.Protos.Shared";

package nodes;

// Node Type Enum
enum NodeType {
    UNKNOWN = 0;
    MASTER = 1;
    WORKER = 2;
}

// Disk Info
message DiskInfo {
    string name = 1;
    string total_size = 2;
    string free_space = 3;
}

// Network Info
message NetworkInfo {
    string interface_name = 1;
    string type = 2;
    string status = 3;
    repeated string ip_addresses = 4;
}

// Node Metadata
message NodeMetadata {
    string node_name = 1;
    string node_ip = 2;
    NodeType node_type = 3;
    string os = 4;
    string architecture = 5;
    string framework = 6;
    string cpu = 7;
    int32 logical_processors = 8;
    string total_ram = 9;
    repeated DiskInfo disks = 10;
    repeated NetworkInfo network_interfaces = 11;
}

// Response Message
message RegisterNodeResponse {
    string message = 1;
}

// gRPC Service Definition
service NodeService {
    rpc RegisterNode(NodeMetadata) returns (RegisterNodeResponse);
}
